<resources>
    <string name="app_name">Global Training</string>
    <string name="chatbot">GT Trainer</string>

    <string name="errorEmail">Email incorrecto</string>
    <string name="errorPassword">Password incorrecto</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_nav_drawer">MainActivityNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nombre_usuario">Kevin Mac</string>
    <string name="correo_usuario">krmac@gmail.com</string>
    <string name="descripcion_foto_perfil">Foto de perfil</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_rutinas">Rutinas</string>
    <string name="menu_ejercicios">Ejercicios</string>
    <string name="menu_articulos">Articulos</string>
    <string name="menu_asistente">Asistente</string>
    <string name="menu_logros">Logros</string>


</resources>